fix(table): override UA th alignment and use logical start

--- a/src/components/table/base.css
+++ b/src/components/table/base.css
@@ -20,6 +20,7 @@
     padding-inline: 1rem;
     padding-block: 0.75rem;
     vertical-align: middle;
+    text-align: start;
   }
 
   :where(thead, tfoot) {
